fixed blurry texts on iPad

--- a/Frontend/src/app/arc/arc.component.scss
+++ b/Frontend/src/app/arc/arc.component.scss
@@ -17,8 +17,8 @@
     color: $mcp-white-2;
     width: 100px;
     font-size: 30px;
-    font-weight: bold;
-    background: $mcp-black-2;
+    font-weight: 500;
+    background: $mcp-black-3;
     user-select: none;
   }
 }
