--- a/Frontend/src/app/cello/cello.component.scss
+++ b/Frontend/src/app/cello/cello.component.scss
@@ -14,7 +14,7 @@
   padding-top: 35px;
   color: $mcp-white-2;
   font-size: 30px;
-  font-weight: bold;
+  font-weight: 500;
   background: linear-gradient($mcp-black-1, hsl(0, 0%, 75%) 100%);
   user-select: none;
 
