--- a/Frontend/src/app/start/start.component.scss
+++ b/Frontend/src/app/start/start.component.scss
@@ -2,7 +2,7 @@
 
 .start-title {
   font-size: 300px;
-  font-weight: bold;
+  font-weight: 500;
   color: $mcp-black-3;
 }
 
